# fractal-app-lite

./: .gitignore  README.md  demo_workflow.py  pyproject.toml  runner_preliminary_findings.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  zizmor.yml
src/backend/: __init__.py  fs.py  jobs.py  main.py  run_service.py  schemas.py  session.py  shell.py  state.py  workflow_service.py
src/backend/routes/: __init__.py  dataset.py  fs.py  params.py  project.py  run.py  session.py  tasks.py  workflow.py
src/fractal_lite/: __init__.py  _collect.py  _dataset.py  _execution.py  _filters.py  _history.py  _package_index.py  _project.py  _registry.py  _runner.py  _tasks.py  _workflow.py  _write_text.py
src/fractal_lite/resources/: package_index.json
src/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
src/frontend/src/: app.html
src/frontend/src/lib/: api.js  filepick.js  markdown.js  pathfield.js  stores.svelte.js  ws.js
src/frontend/src/lib/components/: DatasetTable.svelte  NewProjectModal.svelte  PathModal.svelte  TaskFilters.svelte  Toasts.svelte
src/frontend/src/lib/tabs/: DatasetTab.svelte  SandboxTab.svelte  TasksTab.svelte  WorkflowTab.svelte
src/frontend/src/routes/: +layout.js  +layout.svelte  +page.svelte
tests/: conftest.py
tests/backend/: test_api_smoke.py  test_session.py  test_workflow_api.py
tests/data/hcs_1w1p1c1z1t/data/: B2--W00014--P00001--Z00000--T00000--405 nm #1.tif
tests/fractal_lite/: test_collect.py  test_dataset.py  test_e2e.py  test_filters.py  test_parallel_exec.py  test_project.py  test_runner.py  test_tasks_run.py  test_workflow.py
untitled folder.flp/: project.json  registry.json  workflow.json
