[project]
authors = [{ name = "lorenzo", email = "lorenzo.cerrone@uzh.ch" }]
dependencies = [
    "pydantic",
    "fastapi",
    "uvicorn",
    "pywebview",

]
name = "fractal-lite"
requires-python = ">= 3.11"
version = "0.1.0"
description = "FastAPI + Svelte desktop port of the Fractal Tasks Sandbox."

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov", "httpx", "pyinstaller"]
build = ["pyinstaller"]

[project.scripts]
# Launch the native desktop window (uvicorn in a thread + pywebview).
fractal-lite-app = "backend.shell:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/backend", "src/fractal_lite"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
pydocstyle = { convention = "google" }
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
# B008: FastAPI's `Depends(...)` in argument defaults is the idiomatic pattern.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S"]

[tool.ty.environment]
python = ".pixi/envs/dev"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]


[tool.pixi.pypi-dependencies]
fractal_lite = { path = ".", editable = true }


[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
build = { features = ["build"], solve-group = "default" }

[tool.pixi.tasks]
# Run the API server alone (serves the built frontend if present).
serve = "uvicorn backend.main:app --host 127.0.0.1 --port 8765"
# Launch the native desktop app.
app = "python -m backend.shell"
# Clone fractal-web at the pinned tag into the repo root (idempotent).
clone-fractal-web = { cmd = "git clone --branch v1.27.11 --depth 1 https://github.com/fractal-analytics-platform/fractal-web.git fractal-web-clone || echo 'fractal-web-clone already exists, skipping'" }
# Install JS deps and build the static SvelteKit app.
build-frontend = { cmd = "npm install && npm run build", cwd = "src/frontend" }

[tool.pixi.feature.dev.tasks]
test = "pytest"
test-fast = "pytest -m 'not e2e'"
lint = "ruff check ."
[tool.pixi.feature.build.tasks]
build-executable = "LD_LIBRARY_PATH=.pixi/envs/default/lib pyinstaller --onefile src/backend/shell.py --noconfirm --clean --name fractal --add-data src/frontend/build:frontend/build --exclude-module PyQt6.Qt3D --exclude-module PyQt6.QtMultimedia --paths .pixi/envs/default/lib/"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: slow end-to-end tests that build task pixi environments"]


[tool.pixi.target.osx-arm64.pypi-dependencies]
pywebview = {}

[tool.pixi.target.linux-64.pypi-dependencies]
pywebview = { extras = ["qt"] }
